@@ -22,9 +22,6 @@ View bugs in the JavaScriptCore component in Bugzilla.
 <p>Here are some of the tasks that you can get involved with in JavaScript.</p>
 
 <dl>
-<dt>Bytecode Interpreter</dt>
-<dd>JavaScriptCore currently creates a syntax tree and then uses that syntax tree when executing JavaScript.
-We'd like to use a bytecode interpreter instead, and if it's done right it will make JavaScript run faster and use less memory.</dd>
 
 <dt>Generational Garbage Collector</dt>
 <dd>The garbage collector in JavaScriptCore has been improved quite a bit from the earliest versions.
@@ -32,21 +29,10 @@ But much greater efficiency can be achieved with a garbage collector that uses a
 so we don't have to mark all the objects every time we garbage collect. This should make JavaScript
 run significantly faster.</dd>
 
-<dt>Elminate Smart Pointer Wrappers</dt>
-<dd>The KJS programming interface for JavaScript involves smart pointers that wrap the actual JavaScript objects. For example,
-<tt>KJS::Object</tt> is used to wrap <tt>KJS::ObjectImp</tt>. Since JavaScriptCore now uses conservative garbage collection, the smart pointers
-aren't needed any more. Our plan is to eliminate <tt>KJS::Object</tt> and rename <tt>KJS::ObjectImp</tt> to <tt>KJS::JSObject</tt>,
-and do similar things for the other JavaScript value types. Removing this extra
-struct wrapper should result in better code generation, making the library smaller and JavaScript execution faster.</dd>
-
 <dt>Mozilla JavaScript Test Suite</dt>
 <dd>JavaScriptCore has an implementation of the Mozilla JavaScript Test Suite, and there are currently many failures.
 Fixing any of those failures would help our JavaScript engine be more compliant with the specification, and more
 compatible with real-world web sites as well.</dd>
-
-<dt>ECMAScript for XML</dt>
-<dd>The <a href="http://www.ecma-international.org/publications/standards/Ecma-357.htm">E4X standard</a> adds some XML-related
-features to the JavaScript language. We should consider adding these to the JavaScriptCore engine.</dd>
 
 <dt>Language Extensions</dt>
 <dd>The Mozilla project has begun adding some
@@ -54,10 +40,8 @@ features to the JavaScript language. We should consider adding these to the Java
 Someone needs to evaluate these and decide which of them we should implement. We should also consider extensions of our own driven by
 demand in contexts like Dashboard widgets.</dd>
 
-<dt>C Language Binding</dt>
-<dd>JavaScriptCore currently has the original C++ method of binding native code to JavaScript, an Objective-C binding that's exported from WebKit
-as WebScriptObject, and a browser plug-in oriented C binding. We'd like to create a generic C language binding suitable for use by
-any project that wants to take advantage of the JavaScript engine, but which is easier to maintain compatibly than a C++ binding.</dd>
+<dt>Objective-C Language Binding</dt>
+<dd>JavaScriptCore currently provides a <a href="http://developer.apple.com/documentation/Carbon/Reference/WebKit_JavaScriptCore_Ref">low-level C API</a>, however using JavaScriptCore in an Objective-C application is somewhat involved.  We'd like to add a high-level Objective-C API.</dd>
 </dl>
 
 <?php
