@@ -1,3 +1,14 @@
+2009-07-09  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Geoff Garen.
+
+        JavaScript section of http://webkit.org is excessively out of date.
+
+        This removes old todo entries (like adding an API, which we've had since Leopard),
+        and adds an additional todo for a webkit-less Objective-C API.
+
+        * projects/javascript/index.html:
+
 2009-07-03  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Sam Weinig.
